Use hatch-vcs to generate the version based on git tags

--- a/project/hatch.toml.jinja
+++ b/project/hatch.toml.jinja
@@ -1,5 +1,8 @@
 [version]
-path = "src/{{ python_package_import_name }}/__about__.py"
+source = "vcs"
+
+[build.hooks.vcs]
+version-file = "_version.py"
 
 [env]
 requires = ["hatch-pip-compile"]
